<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignInActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="565dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_here"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/greetings"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/welcome_back"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/credentials"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/credentials"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/password"
                android:inputType="text"
                android:paddingStart="20dp"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonSign"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@color/orange"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_account"
                android:textColor="#BB000000"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
